--- a/Views/Shared/_Favourites.cshtml
+++ b/Views/Shared/_Favourites.cshtml
@@ -2,7 +2,7 @@
 {
     <li class="todo-done">
         <a class="todo-icon fui-heart" onclick="removeFavourite(@article.ID)"></a>
-        <a class="todo-content" href="@article.WebsiteUrl">
+        <a class="todo-content" href="@article.WebsiteUrl" target="_blank">
             <h4 class="todo-name text-ellipsis">
                 @article.Title
             </h4>
