--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
             <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Settings
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <label class="checkbox"><input type="checkbox" checked data-toggle="toggle">Trump</label>
+            <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
+                <label class="checkbox" id="setting_checkbox"><input type="checkbox" checked data-toggle="toggle"/>Trump</label>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Another action</a>
+                <input type="button"  value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'" />
             </div>
         </div>
         <button class="btn btn-primary ml-3" type="button"
