--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
                 Settings
             </button>
             <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
-                <label class="checkbox" id="setting_checkbox"><input type="checkbox" checked data-toggle="toggle"/>Trump</label>
+                <label class="checkbox" id="setting_checkbox"><input type="checkbox" checked data-toggle="toggle" />Trump</label>
                 <div class="dropdown-divider"></div>
-                <input type="button"  value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'" />
+                <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'" />
             </div>
         </div>
         <button class="btn btn-primary ml-3" type="button"
@@ -30,10 +30,13 @@
 <div class="row">
     <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
         <div class="website-container" onclick="websiteClick(this)" value="1">
-            <img src="~/images/cnn.png"/>
+            <img src="~/images/cnn.png" />
         </div>
         <div class="website-container selected" onclick="websiteClick(this)" value="3">
-            <img src="~/images/BBC.png"/>
+            <img src="~/images/BBC.png" />
+        </div>
+        <div class="website-container selected" onclick="websiteClick(this)" value="7">
+            <img src="~/images/cnbclogo.png" />
         </div>
     </div>
 </div>
