--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
                 <label class="checkbox" id="setting_checkbox"><input type="checkbox" checked data-toggle="toggle"/>Trump</label>
                 <div class="dropdown-divider"></div>
-                <input type="button"  value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'" />
+                <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/>
             </div>
         </div>
         <button class="btn btn-primary ml-3" type="button"
@@ -34,6 +34,9 @@
         </div>
         <div class="website-container selected" onclick="websiteClick(this)" value="3">
             <img src="~/images/BBC.png"/>
+        </div>
+        <div class="website-container" onclick="websiteClick(this)" value="7">
+            <img src="~/images/CNBC.png"/>
         </div>
     </div>
 </div>
