--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg 
             d-flex flex-row justify-content-end align-items-center" role="navigation">
-    <div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between mr-2">
         <div class="dropdown">
             <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Settings
@@ -13,13 +13,18 @@
                 <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/>
             </div>
         </div>
-        <button class="btn btn-primary ml-3" type="button"
+        <button id="logout-btn" class="btn btn-default ml-3" type="button" 
+                onclick="logout()"
+                style="display: none">
+                    Logout
+                </button>
+        <button id="login-btn" class="btn btn-default ml-3" type="button"
                 data-type="Login"
                 data-toggle="modal"
                 data-target="#login-modal">
             Login
         </button>
-        <button class="btn btn-primary ml-3" type="button"
+        <button id="signup-btn" class="btn btn-primary ml-3" type="button"
                 data-type="Signup"
                 data-toggle="modal"
                 data-target="#login-modal">
@@ -48,8 +53,8 @@
     <div class="divider-lg"></div>
 
 </div>
-<div class="row">
-    <div class="col-md-4">
+<div class="row d-flex justify-content-center">
+    <div class="col-md-4" style="display: none">
         <div id="favourites" class="todo">
             <div class="todo-search">
                 <input class="todo-search-field" type="search" onchange="searchFavourites(this)" placeholder="Search Favourites">
@@ -81,7 +86,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form asp-action="Index" asp-controller="Form" method="POST" id="login-form">
+                <form id="login-form">
                     <div class="form-group">
                         <label asp-for="LoginUserEmail" class="col-form-label"></label>
                         <input asp-for="LoginUserEmail" type="text" class="form-control" required
@@ -96,7 +101,7 @@
                         <button type="submit" class="btn btn-primary ml-2 btn-lg">Login</button>
                     </div>
                 </form>
-                <form asp-action="Index" asp-controller="Form" method="POST" id="signup-form" style="display: none">
+                <form id="signup-form" style="display: none">
                     <div class="form-group">
                         <label asp-for="RegisterEmail" class="col-form-label">Email</label>
                         <input asp-for="RegisterEmail" type="text" class="form-control" required
@@ -119,6 +124,7 @@
                         <button type="submit" class="btn btn-primary ml-2 btn-lg">Sign up</button>
                     </div>
                 </form>
+                <p id="response"></p>
             </div>
         </div>
     </div>
