--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,41 +1,34 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - News</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-
     <link href="~/css/bootstrap.css" rel="stylesheet">
     <link href="~/css/flat-ui.css" rel="stylesheet">
     <link href="~/css/site.css" rel="stylesheet">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
         @RenderBody()
-        <hr />
+        <hr/>
         <footer>
             <p>&copy; 2019 - News</p>
         </footer>
     </div>
 
-    @*@RenderSection("Scripts", required: false)*@
-
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-            crossorigin="anonymous">
-    </script>
-
-
+    <script src="~/js/jquery-3.4.1.min.js" asp-append-version="true"></script>
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="~/js/popper.min.js" asp-append-version="true"></script>
     <script src="~/js/bootstrap.bundle.js" asp-append-version="true"></script>
     <script src="~/js/application.js" asp-append-version="true"></script>
     <script src="~/js/flat-ui.js" asp-append-version="true"></script>
+    <script src="~/js/formhandler.js" asp-append-version="true"></script>
+    <script src="~/js/userAuth.js" asp-append-version="true"></script>
     <script src="~/js/favourite.js" asp-append-version="true"></script>
     <script src="~/js/filter.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
 </body>
 </html>
