Added search feature for favourites

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
     <div class="col-md-4" style="display: none">
         <div id="favourites" class="todo">
             <div class="todo-search">
-                <input class="todo-search-field" type="search" onchange="searchFavourites(this)" placeholder="Search Favourites">
+                <input class="todo-search-field" type="search" oninput="searchFavourites(this)" placeholder="Search Favourites">
                 <div class="fui-list" data-toggle="tooltip" onclick="toggleFavourites(this)" data-original-title="Click to expand or shrink favourites"></div>
             </div>
             <ul>
