Added focus mode feature Removed unnecessary js file Added bootstrap switches

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,16 +19,14 @@
         </footer>
     </div>
 
-    <script src="~/js/jquery-3.4.1.min.js" asp-append-version="true"></script>
-    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-    <script src="~/js/popper.min.js" asp-append-version="true"></script>
-    <script src="~/js/bootstrap.bundle.js" asp-append-version="true"></script>
-    <script src="~/js/application.js" asp-append-version="true"></script>
-    <script src="~/js/flat-ui.js" asp-append-version="true"></script>
-    <script src="~/js/formhandler.js" asp-append-version="true"></script>
-    <script src="~/js/userAuth.js" asp-append-version="true"></script>
-    <script src="~/js/favourite.js" asp-append-version="true"></script>
-    <script src="~/js/filter.js" asp-append-version="true"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/jquery-3.4.1.min.js" ></script>
+    <script src="~/js/popper.min.js" ></script>
+    <script src="~/js/bootstrap.bundle.js" ></script>
+    <script src="~/js/flat-ui.js" ></script>
+    <script src="~/js/formhandler.js" ></script>
+    <script src="~/js/userAuth.js" ></script>
+    <script src="~/js/favourite.js" ></script>
+    <script src="~/js/filter.js" ></script>
+    <script src="~/js/site.js" ></script>
 </body>
 </html>
