--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,58 +1,62 @@
 ﻿@model News.Models.LoginRegisterForm
-
-<nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg 
+    <nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg 
             d-flex flex-row justify-content-between align-items-center" role="navigation">
-    <div class="email-text" id="email"></div>
-    <div class="d-flex justify-content-between mr-2">
-        <div class="dropdown">
-            <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Settings
+        <div class="email-text" id="email"></div>
+        <div class="d-flex justify-content-between mr-2">
+            <div class="dropdown">
+                <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Settings
+                </button>
+                <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
+                    <input id="focus-switch" type="checkbox" name="focus-mode" data-size="large">
+                    <label for="focus-switch">Focus mode</label>
+
+                    <div class="dropdown-divider"></div>
+                    <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/>
+                </div>
+            </div>
+            <button id="logout-btn" class="btn btn-default ml-3" type="button"
+                    onclick="logout()"
+                    style="display: none">
+                Logout
             </button>
-            <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
-                <label class="checkbox" id="setting_checkbox"><input type="checkbox" checked data-toggle="toggle"/>Trump</label>
-                <div class="dropdown-divider"></div>
-                <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/>
+            <button id="login-btn" class="btn btn-default ml-3" type="button"
+                    data-type="Login"
+                    data-toggle="modal"
+                    data-target="#login-modal">
+                Login
+            </button>
+            <button id="signup-btn" class="btn btn-primary ml-3" type="button"
+                    data-type="Signup"
+                    data-toggle="modal"
+                    data-target="#login-modal">
+                Sign Up
+            </button>
+        </div>
+    </nav>
+    <div id="focus-container">
+
+    <div class="row">
+        <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
+            <div class="website-container" onclick="websiteClick(this)" value="1">
+                <img src="~/images/cnn.png"/>
+            </div>
+            <div class="website-container selected" onclick="websiteClick(this)" value="3">
+                <img src="~/images/BBC.png"/>
+            </div>
+            <div class="website-container" onclick="websiteClick(this)" value="7">
+                <img src="~/images/CNBC.png"/>
             </div>
         </div>
-        <button id="logout-btn" class="btn btn-default ml-3" type="button"
-                onclick="logout()"
-                style="display: none">
-            Logout
-        </button>
-        <button id="login-btn" class="btn btn-default ml-3" type="button"
-                data-type="Login"
-                data-toggle="modal"
-                data-target="#login-modal">
-            Login
-        </button>
-        <button id="signup-btn" class="btn btn-primary ml-3" type="button"
-                data-type="Signup"
-                data-toggle="modal"
-                data-target="#login-modal">
-            Sign Up
-        </button>
     </div>
-</nav>
-<div class="row">
-    <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
-        <div class="website-container" onclick="websiteClick(this)" value="1">
-            <img src="~/images/cnn.png"/>
+    <div class="row justify-content-center">
+        <div class="divider-md"></div>
+        <div id="genres" class="genre-container col-lg-12" data-toggle="buttons" overflow-auto>
+            @Html.Partial("_Genres")
         </div>
-        <div class="website-container selected" onclick="websiteClick(this)" value="3">
-            <img src="~/images/BBC.png"/>
-        </div>
-        <div class="website-container" onclick="websiteClick(this)" value="7">
-            <img src="~/images/CNBC.png"/>
-        </div>
-    </div>
-</div>
-<div class="row justify-content-center">
-    <div class="divider-md"></div>
-    <div id="genres" class="genre-container col-lg-12" data-toggle="buttons" overflow-auto>
-        @Html.Partial("_Genres")
-    </div>
-    <div class="divider-lg"></div>
+        <div class="divider-lg"></div>
 
+    </div>
 </div>
 <div class="row d-flex justify-content-center">
     <div class="col-md-4" style="display: none">
