--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,6 +7,9 @@ for details on configuring this project to bundle and minify static web assets. 
     --color-belize-hole: #2980B9;
     --color-wet-asphalt: #34495E;
     --color-midnight-blue: #2C3E50;
+    --color-light-gray: #CACFD2;
+    --color-gray: #BDC3C7;
+    --color-dark-gray: #6C757D;
 }
 
 body {
@@ -125,7 +128,7 @@ body {
 
 .fav-icon {
     position: absolute;
-    color: var(--gray);
+    color: var(--color-dark-gray);
     right: 1rem;
     top: 1.5rem;
     font-size: 33px;
@@ -201,6 +204,7 @@ body {
 .fui-list:hover {
     cursor: pointer;
 }
+
 /* UTIL */
 .divider-sm, .divider-md, .divider-lg {
     height: 3px;
@@ -244,7 +248,89 @@ footer {
 }
 
 .email-text {
-    color: #bdc3c7;
+    color: gray;
     font-size: 1.1rem;
     margin-left: 0.5rem;
+}
+
+/* THEME */
+.navbar-inverse {
+    background-color: var(--color-wet-asphalt);
+}
+
+.btn-primary {
+    background-color: var(--color-turquoise);
+    background: var(--color-turquoise);
+    transition: 0.2s;
+    filter: brightness(90%);
+}
+
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+    background-color: var(--color-turquoise)!important;
+    background: var(--color-turquoise)!important;
+    filter: brightness(100%);
+}
+
+.btn-default {
+    background-color: var(--color-gray);
+    background: var(--color-gray);
+    transition: 0.2s;
+    filter: brightness(90%);
+}
+
+.btn-default:hover, .btn-default:active, .btn-default:focus {
+    background-color: var(--color-gray)!important;
+    background: var(--color-gray)!important;
+    filter: brightness(100%);
+}
+
+.btn-info {
+    background-color: var(--color-peter-river);
+    transition: 0.2s;
+    filter: brightness(90%);
+}
+
+.btn-info:hover, .btn-info:focus {
+    background-color: var(--color-peter-river);
+    border-color: var(--color-peter-river);
+    filter: brightness(100%);
+}
+
+.btn-info:active, .show > .dropdown-toggle.btn-info {
+    background: var(--color-belize-hole)!important;
+    border-color: var(--color-belize-hole)!important;
+}
+
+.todo-search {
+    background: var(--color-turquoise);
+}
+
+.todo li.todo-done {
+    color: var(--color-turquoise);
+}
+
+.todo li.todo-done .todo-name {
+    color: var(--color-turquoise);
+}
+
+.todo ul {
+    background-color: var(--color-midnight-blue);
+}
+
+a {
+    color: var(--color-green-sea);
+}
+
+a:hover {
+    color: var(--color-turquoise);
+}
+
+.bootstrap-switch-primary {
+    color: var(--color-turquoise);
+    background-color: var(--color-midnight-blue);
+}
+
+.bootstrap-switch-primary ~ .bootstrap-switch-handle-off:before {
+    background: var(--color-turquoise);
+    border-color: var(--color-midnight-blue);
 }
