--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,8 +13,8 @@
                     <input id="theme-switch" type="checkbox" name="focus-mode" checked data-size="large">
                     <label for="theme-switch">Change theme</label>
 
-                    <div class="dropdown-divider"></div>
-                    <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/>
+                    @* <div class="dropdown-divider"></div> *@
+                    @* <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/> *@
                 </div>
             </div>
             <button id="logout-btn" class="btn btn-default ml-3" type="button"
