--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
                     Settings
                 </button>
                 <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
+                    <label for="focus-switch"><span class="fui-search mr-2"></span>Focus mode</label>
                     <input id="focus-switch" type="checkbox" name="focus-mode" data-size="large">
-                    <label for="focus-switch">Focus mode</label> 
+                    <label for="theme-switch"><span class="fui-new mr-2"></span>Change theme</label>
                     <input id="theme-switch" type="checkbox" name="focus-mode" checked data-size="large">
-                    <label for="theme-switch">Change theme</label>
 
                     @* <div class="dropdown-divider"></div> *@
                     @* <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/> *@
