--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,13 +41,19 @@
     <div class="row">
         <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
             <div class="website-container" onclick="websiteClick(this)" value="1">
-                <img src="~/images/cnn.png"/>
+                <img src="~/images/cnn.png" />
             </div>
             <div class="website-container selected" onclick="websiteClick(this)" value="3">
-                <img src="~/images/BBC.png"/>
+                <img src="~/images/BBC.png" />
             </div>
             <div class="website-container" onclick="websiteClick(this)" value="7">
-                <img src="~/images/CNBC.png"/>
+                <img src="~/images/CNBC.png" />
+            </div>
+            <div class="website-container" onclick="websiteClick(this)" value="10">
+                <img src="~/images/TechCrunch.png" />
+            </div>
+            <div class="website-container" onclick="websiteClick(this)" value="12">
+                <img src="~/images/FOX.png" />
             </div>
         </div>
     </div>
