--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,7 +14,7 @@ for details on configuring this project to bundle and minify static web assets. 
 
 body {
     padding-top: 1rem;
-    background-color: var(--color-midnight-blue);
+    background-color: var(--color-wet-asphalt);
 }
 
 /* DROPDOWN */
