--- a/Views/Shared/_Favourites.cshtml
+++ b/Views/Shared/_Favourites.cshtml
@@ -4,7 +4,7 @@
         <a class="todo-icon fui-heart" onclick="removeFavourite(@article.ID)"></a>
         <a class="todo-content" href="@article.WebsiteUrl" target="_blank">
             <h4 class="todo-name text-ellipsis">
-                @article.Title
+                <a href="#" data-toggle="tooltip" title="@article.Title">@article.Title</a>
             </h4>
             @article.WebsiteName
         </a>
