Added forgot password feature Styled forgot password page Added user_password_reset table for userIds and their restore keys

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -287,7 +287,7 @@ footer {
 
 /* THEME */
 .navbar-inverse {
-    background-color: var(--color-wet-asphalt);
+    background-color: var(--color-midnight-blue);
 }
 
 .btn-primary {
