--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,43 +1,42 @@
 ﻿@model News.Models.LoginRegisterForm
-<nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg 
+    <nav class="navbar navbar-inverse navbar-embossed navbar-expand-lg 
             d-flex flex-row justify-content-between align-items-center" role="navigation">
-    <h3 class="title">Outright News</h3>
-    <div class="email-text" id="email"></div>
-    <div class="d-flex justify-content-between mr-2">
-        <div class="dropdown">
-            <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Settings
-            </button>
-            <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
-                <label for="focus-switch"><span class="fui-search mr-2"></span>Focus mode</label>
-                <input id="focus-switch" type="checkbox" name="focus-mode" data-size="large">
-                <label for="theme-switch"><span class="fui-new mr-2"></span>Change theme</label>
-                <input id="theme-switch" type="checkbox" name="focus-mode" checked data-size="large">
+        <div class="email-text" id="email"></div>
+        <div class="d-flex justify-content-between mr-2">
+            <div class="dropdown">
+                <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Settings
+                </button>
+                <div class="dropdown-menu" id="settings_dropdown" aria-labelledby="dropdownMenuButton">
+                    <label for="focus-switch"><span class="fui-search mr-2"></span>Focus mode</label>
+                    <input id="focus-switch" type="checkbox" name="focus-mode" data-size="large">
+                    <label for="theme-switch"><span class="fui-new mr-2"></span>Change theme</label>
+                    <input id="theme-switch" type="checkbox" name="focus-mode" checked data-size="large">
 
-                @* <div class="dropdown-divider"></div> *@
-                @* <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/> *@
+                    @* <div class="dropdown-divider"></div> *@
+                    @* <input type="button" value="Profile" class="dropdown-item" onclick="location.href = '@Url.Action("Index", "Profile")'"/> *@
+                </div>
             </div>
+            <button id="logout-btn" class="btn btn-default ml-3" type="button"
+                    onclick="logout()"
+                    style="display: none">
+                Logout
+            </button>
+            <button id="login-btn" class="btn btn-default ml-3" type="button"
+                    data-type="Login"
+                    data-toggle="modal"
+                    data-target="#login-modal">
+                Login
+            </button>
+            <button id="signup-btn" class="btn btn-primary ml-3" type="button"
+                    data-type="Signup"
+                    data-toggle="modal"
+                    data-target="#login-modal">
+                Sign Up
+            </button>
         </div>
-        <button id="logout-btn" class="btn btn-default ml-3" type="button"
-                onclick="logout()"
-                style="display: none">
-            Logout
-        </button>
-        <button id="login-btn" class="btn btn-default ml-3" type="button"
-                data-type="Login"
-                data-toggle="modal"
-                data-target="#login-modal">
-            Login
-        </button>
-        <button id="signup-btn" class="btn btn-primary ml-3" type="button"
-                data-type="Signup"
-                data-toggle="modal"
-                data-target="#login-modal">
-            Sign Up
-        </button>
-    </div>
-</nav>
-<div id="focus-container">
+    </nav>
+    <div id="focus-container">
 
     <div class="row">
         <div id="websites" class="col-lg-12 d-flex justify-content-around" overflow-auto>
@@ -82,7 +81,7 @@
         <div class="todo-search w-100">
             <input id="article-search-field" class="todo-search-field" type="search" oninput="searchArticles(this)" placeholder="Search Articles">
         </div>
-        <div id="articles" class="article-container" >
+        <div id="articles" class="article-container">
             @Html.Partial("_Articles")
         </div>
     </div>
@@ -106,10 +105,9 @@
                         <input asp-for="LoginPassword" type="password" class="form-control login-field" required
                                placeholder="Password">
                     </div>
-                    <div class="d-flex flex-column justify-content-end align-items-center">
-                        <button type="submit" class="btn btn-primary mb-2 btn-lg w-100">Login</button>
-                        <button type="button" class="btn btn-default btn-lg w-100" data-dismiss="modal">Close</button>
-                        <a class="pt-2" href="/PasswordReset/Index/">Forgot password?</a>
+                    <div class="d-flex flex-column justify-content-end">
+                        <button type="submit" class="btn btn-primary mb-2 btn-lg">Login</button>
+                        <button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Close</button>
                     </div>
                 </form>
                 <form id="signup-form" class="login-form" style="display: none">
@@ -144,11 +142,3 @@
         </div>
     </div>
 </div>
-
-<link href="~/css/site.css" rel="stylesheet">
-
-<script src="~/js/formhandler.js"></script>
-<script src="~/js/userAuth.js"></script>
-<script src="~/js/favourite.js"></script>
-<script src="~/js/filter.js"></script>
-<script src="~/js/site.js"></script>
