--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,23 +6,27 @@
     <title>@ViewData["Title"] - News</title>
     <link href="~/css/bootstrap.css" rel="stylesheet">
     <link href="~/css/flat-ui.css" rel="stylesheet">
+    <link href="~/css/site.css" rel="stylesheet">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-
-    <script src="~/js/jquery-3.4.1.min.js"></script>
-    <script src="~/js/popper.min.js"></script>
-    <script src="~/js/bootstrap.bundle.js"></script>
-    <script src="~/js/flat-ui.js"></script>
 </head>
 
 <body>
-<div class="container-fluid">
-    @RenderBody()
-    <hr/>
-    <footer>
-        <p>&copy; 2019 - News</p>
-    </footer>
-</div>
+    <div class="container-fluid">
+        @RenderBody()
+        <hr/>
+        <footer>
+            <p>&copy; 2019 - News</p>
+        </footer>
+    </div>
 
-
+    <script src="~/js/jquery-3.4.1.min.js" ></script>
+    <script src="~/js/popper.min.js" ></script>
+    <script src="~/js/bootstrap.bundle.js" ></script>
+    <script src="~/js/flat-ui.js" ></script>
+    <script src="~/js/formhandler.js" ></script>
+    <script src="~/js/userAuth.js" ></script>
+    <script src="~/js/favourite.js" ></script>
+    <script src="~/js/filter.js" ></script>
+    <script src="~/js/site.js" ></script>
 </body>
 </html>
